--- a/_posts/2022-02-14.md
+++ b/_posts/2022-02-14.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 4'
+title: 'A computer vision journey on volcanic unrest detection'
 date: 2022-02-14
-permalink: /posts/2012/08/volcanic-unrest-vision-journey/
+permalink: /posts/2022/02/volcanic-unrest-vision-journey/
 tags:
   - volcano
   - computer vision
